Changes for 1.2.7
* Moore AI major fix, was considering defender's attack values instead of defense values under some circumstances. Formula to remove casualty units was returning the list as is without properly sorting first, 
and was saying that anything with zero attack value has zero rolls in any battles, even if defending. Removed zero-movement units from combat-movement considerations. Also added a debug logger to moore ai properties. (veqryn)

* Moore AI major fix, was disqualifying all land units from attacking when those land units did not have artillery, isInfantry, or blitz. Much improved performance on 270BC. (veqryn)

* Moore AI SUtils getExactNeighbors() fix, was returning incorrect data for any distance greater than 2. (veqryn)

* Moore AI logic fix, calculations for taking enemy capitol with allied help included owned strength when looking at allied strength, also 
  getExactNeighbors was returning incorrect data by not fully removing previous iterations (getExactNeighbors still returns incorrect data if distance > 2). (squidbait)

* Easy AI major fix, was considering all water territories on the map in the list of territories to attack with land units. (veqryn)

* Easy AI will now purchase units for bid, however it will only purchase land units, and only place them in the capitol. (veqryn)

* Easy AI bug fix, was purchasing zero units when it had to repair a factory and also had at least 1 other factory with no repairs. Also fixed AI not using all of its money when it had enough left to buy one more unit.  (veqryn)

* Fixed Moore AI not puchasing anything when it has placeanywhere rules and no factories, and fixed it placing everything inside a capitol which is impassable (bug 2965154), 
and fixed a list which was growing indefinitely each round with duplicates, the AI will no longer place in any impassible territory, the AI will not attempt to place factories in territories just conquered, 
and also made further tweaks to the AI (veqryn).
