@@ -1,4 +1,6 @@
 Changes for 1.2.7
+* Moore AI fixes, will now return immediately if it has nothing to do for moves and purchasing (wisconsin), and will now repair damaged factories correctly (veqryn).
+
 * Moore AI major fix, was considering defender's attack values instead of defense values under some circumstances. Formula to remove casualty units was returning the list as is without properly sorting first, 
 and was saying that anything with zero attack value has zero rolls in any battles, even if defending. Removed zero-movement units from combat-movement considerations. Also added a debug logger to moore ai properties. (veqryn)
 
